===================
Changes for ls-hive
===================

unreleased
==========

2012/06/19 0.3-SNAPSHOT
=======================

 - added UDAFCumulateHistogram


2012/06/14 0.2-SNAPSHOT
=======================

 - added GreatestUDF